changes in index

--- a/public/index.html
+++ b/public/index.html
@@ -65,14 +65,16 @@
 	</section>
 
 	<section>
-		<h1>Availability</h1>
-		<p class="tagline">The app will soon be available for iPhone and iPad with ios8 or newer.</p>
+		<h1>About</h1>
+		<p class="tagline">The Amberbio app lets scientists analyze and visualize biological data sets on mobile devices.</p>
+		<p class="tagline">The data sets that can be analyzed consist of abundances for molecules across samples.</p>      
+		<p class="tagline">The app will soon be available for iPhone and iPad.</p>
 	</section>
 
 	<section>
 		<h1>Price</h1>
-		<p class="tagline">The app is a paid app with no extra costs and no adds. Future updates are free. The purchased app can be freely installed on other devices with the same Apple id.</p>
-		<p class="tagline">The price is subject to change. The current price is approximately.</p>
+		<p class="tagline">The app is a paid app with no extra costs and no adds. Future updates are free. The purchased app can be freely installed on other devices with the same Apple ID.</p>
+		<p class="tagline">The current price is  with small country to country variations.</p>
 	</section>
 
 	<section id="features">
@@ -149,7 +151,7 @@
 		
 		<div class="column">
 			<h2>Screen shots</h2>
-			Screen shots of the app showing the above mentioned features among others can be found on <a href="/screen-shots">screen shots</a>.
+			Screen shots of the app showing some of the features can be found on <a href="/screen-shots">screen shots</a>.
 		</div>
 	</section>
 
