--- a/public/index.html
+++ b/public/index.html
@@ -66,8 +66,8 @@
 
 	<section>
 		<h1>About</h1>
-		<p class="tagline">The Amberbio app lets scientists analyze and visualize biological data sets on mobile devices.</p>
-		<p class="tagline">The data sets that can be analyzed consist of abundances for molecules across samples.</p>      
+		<p class="tagline">The Amberbio app allows scientists to analyze and visualize biological data sets on mobile devices.</p>
+		<p class="tagline">Many types of data can be analyzed in the app including protein, microRNA, and gene expression data.</p>
 		<p class="tagline">The app will soon be available for iPhone and iPad.</p>
 	</section>
 
@@ -97,12 +97,12 @@
 
 		<div class="column">
 			<h2>Simple user interface</h2>
-			The user interface is mostly touch based and is very easy to use. No training is needed. Each page in the app has an info button which provides some additional information if anything might be unclear.
+			The user interface is touch based and can be used without training. Each page in the app has an info button which provides additional information.
 		</div>
 
 		<div class="column">
 			<h2>Import</h2>
-			New data sets can be imported from tab, or comma, separated files. Files can be imported through email, or through cloud storage providers such as iCloud, Dropbox or Box.
+			New data sets can be imported from tab or comma separated files. Files can be imported through email, or through cloud storage providers such as iCloud, Dropbox, or Box.
 		</div>
 
 		<div class="column">
@@ -170,8 +170,8 @@
 	</section>
 	<section id="feedback">
 		<h1>Feedback</h1>
-		<p class="tagline">We welcome all feedback.</p>
-		<p class="tagline">We can more efficiently improve the Amberbio app if we get feedback.</p>
+		<p class="tagline">We welcome any feedback.</p>
+		<p class="tagline">We would like to improve the Amberbio app.</p>
 		<p class="tagline">Feedback can be sent by email to <a href="mailto:info@amberbio.com">info@amberbio.com</a>.</p>
 	</section>
 
