--- a/public/index.html
+++ b/public/index.html
@@ -159,7 +159,7 @@
 	<section id="privacy">
 		<h1>Privacy</h1>
 		<p class="tagline">The Amberbio app respects user privacy.</p>  
-		<p class="tagline">No data is sent to  server.</p>
+		<p class="tagline">No data is sent to the server.</p>
 		<p class="tagline">All analysis is performed locally on the device.</p>
 		<p class="tagline">There are no user names and log in.</p>
 	</section>
