separate web pages

--- a/public/features.html
+++ b/public/features.html
@@ -5,7 +5,7 @@
 	<meta name="description" content="Nosy Bee provides web surveys, statistical analysis och result reports.">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>Amberbio</title>
-        <link rel="icon" type="image/png" href="/favicon.png" />
+	<link rel="icon" type="image/png" href="/favicon.png" />
 	<link rel="stylesheet" href="css/index.css" type="text/css">
 	<script>
 	document.createElement('header');
@@ -58,80 +58,87 @@
 </header>
 
 <article>
-	<section>
-		<h1>Amber Biosciences offers consulting services in bioinformatics and bio-statistics.</h1>
-		<p class="tagline">We work interactively with our customers and take part in their research projects.</p>
-		<p class="tagline">Contact us either at <a href="mailto:info@amberbio.com">info@amberbio.com</a> or personally.</p>
-		<p class="tagline">Contact information can be found at <a href="/#contact">Contact</a>.</p>
-	</section>
-
-	<section>
-		<h1>Consulting fee</h1>
-		<p class="tagline">We usually have fixed prices for our projects because it is easier for customers to handle.</p>
-		<p class="tagline">We will agree on a price after initial discussions.</p>
-	</section>
-
-	<section>
-		<h1>Our consulting services</h1>
-
+	<section id="features">
+		<h1>Features of the Amberbio app</h1>
 		<div class="column">
-			<h2>How we work</h2>
-			<div>
-				We work interactively with our customers and try to listen to their needs. The usual procedure is that we have an initial meeting where we discuss the project. After agreeing on a contract, we perform the analysis in close contact with the customer. Our work is done when there is agreement that a final result has been achieved.
-			</div>
+			<h2>Mobile data analysis</h2>
+			The Amberbio app performs all calculations and visualization on the mobile device. The data is always available and can be visualized and analyzed in real time during meetings for example.
 		</div>
 
 		<div class="column">
-			<h2>Gene expression</h2>
-			We have a lot of experience working with gene expression data sets from microarrays or qPCR. We can help with every step in the analysis including finding new scientific hypothesis.
+			<h2>Types of data</h2>
+			Data sets consist of samples, molecules, and measurements for each molecule-sample pair. Missing values are allowed. Various types of data can be analyzed in the app such as mRNA gene expression, protein abundances, or microRNA abundance. Even data sets of a non-biological origin can be used.
 		</div>
 		
 		<div class="column">
-			<h2>Proteomics</h2>
-			We also analyze proteomics data from mass spectrometry or 2D gels.
-
+			<h2>Experimental origin of data</h2>
+			Data from any experimental origin can be analyzed including microarrays, sequencing, qPCR, mass spectrometry, and 2D gels. 
 		</div>
 
 		<div class="column">
-			<h2>Sequencing</h2>
-			We can take raw sequencing data and pre-process it into a format for further analysis. Sequencing data can be used for gene expression as well as an alternative to microarrays.
+			<h2>Simple user interface</h2>
+			The user interface is touch based and can be used without training. Each page in the app has an info button which provides additional information.
 		</div>
 
 		<div class="column">
-			<h2>Classification</h2>
-			We perform supervised classification using support vector machines and other techniques. Classification is useful for diagnostics. For example, blood samples might contain diagnostic information. Supervised classification might be able to find the diagnostic signal in the data.  
+			<h2>Import</h2>
+			New data sets can be imported from tab or comma separated files. Files can be imported through email, or through cloud storage providers such as iCloud, Dropbox, or Box.
 		</div>
 
 		<div class="column">
-			<h2>Statistics</h2>
-			We can perform various statistical tests on the data. We have used R and Matlab, but we can help with other systems as well.
+			<h2>Export</h2>
+			Tables and figures can be exported by email or through cloud storage providers. The simple export methods make it easy to view figures on a large screen if needed.
+		</div>
+
+		<div class="column">
+			<h2>Backup</h2>
+			Projects can be exported to a database file that can be used for backup and transfer to other devices. The database files make it easy to transfer data to collaborators.
+		</div>
+
+		<div class="column">
+			<h2>Statistical tests</h2>
+			The app can perform t-tests, Mann-Whitney tests, ANOVA tests, paired t-tests, and linear regression.
+		</div>
+	
+		<div class="column">
+			<h2>Visualizations</h2>
+			The data can be visualized in various ways giving the user a better understanding of the data.
+		</div>
+	
+		<div class="column">
+			<h2>Unsupervised classification</h2>
+ 			The app can perform 2D and 3D principal component analysis, hierarchical clustering, and heat maps. Various options can be chosen interactively.
+		</div>
+
+		<div class="column">
+			<h2>Creation of new data sets</h2>
+			The app can produce new derived data sets by normalization, logarithmic transformation, sample removal, molecule removal, or selection of molecules from a table.
+		</div>
+		
+		<div class="column">
+			<h2>Missing values</h2>
+			The app contains histograms of missing values for the samples. The histograms can be ordered in various ways.
 		</div>
 
 		<div class="column">
 			<h2>Figures</h2>
-			We prepare and customize publication ready figures.
+			The app can produce various customizable color figures. The figures can be exported to either pdf or png files.
 		</div>
 
 		<div class="column">
-			<h2>Data repositories</h2>
-			Many journals require that data is deposited in a public repository. We handle the entire process of formatting and uploading the data.
+			<h2>Tables</h2>
+			The app can display tables of molecules. Tables can be sorted, searched, and exported to txt files.
 		</div>
-
+		
 		<div class="column">
-			<h2>Pre-processing</h2>
-			Most data requires pre-processing and quality control. We can perform such processing when necessary.
-		</div>
-	
-		<div class="column">
-			<h2>Normalization</h2>
-			We can compare various normalization strategies and help select a proper normalization. 
+			<h2>Screen shots</h2>
+			Screen shots of the app showing some of the features can be found on <a href="/screen-shots">screen shots</a>.
 		</div>
 	</section>
 
 	<div class="figure">
 	  <img src="img/hierarchical-clustering-plot.png" alt="hierarchical clustering" style="width: 100%">
 	</div>
-
 </article>
 </body>
 </html>
