--- a/public/about.html
+++ b/public/about.html
@@ -5,7 +5,7 @@
 	<meta name="description" content="Nosy Bee provides web surveys, statistical analysis och result reports.">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>Amberbio</title>
-        <link rel="icon" type="image/png" href="/favicon.png" />
+	<link rel="icon" type="image/png" href="/favicon.png" />
 	<link rel="stylesheet" href="css/index.css" type="text/css">
 	<script>
 	document.createElement('header');
@@ -50,81 +50,58 @@
 		<a href="/#support">Support</a>
 		<a href="/#feedback">Feedback</a>
 		<a href="/consulting">Consulting</a>
-		<a href="/#about">About us</a>
-		<a href="/#contact">Contact</a>
+		<a href="/about">About us</a>
+		<a href="/contact">Contact</a>
 	</nav>
 	
 	<div style="clear: both; height : 0px;"></div>
 </header>
 
 <article>
-	<section>
-		<h1>Amber Biosciences offers consulting services in bioinformatics and bio-statistics.</h1>
-		<p class="tagline">We work interactively with our customers and take part in their research projects.</p>
-		<p class="tagline">Contact us either at <a href="mailto:info@amberbio.com">info@amberbio.com</a> or personally.</p>
-		<p class="tagline">Contact information can be found at <a href="/#contact">Contact</a>.</p>
-	</section>
+	<section id="about">
 
-	<section>
-		<h1>Consulting fee</h1>
-		<p class="tagline">We usually have fixed prices for our projects because it is easier for customers to handle.</p>
-		<p class="tagline">We will agree on a price after initial discussions.</p>
-	</section>
-
-	<section>
-		<h1>Our consulting services</h1>
-
+		<h1>About Amber biosciences</h1>
+		<div class="column">
+			<h2>Amberbio app</h2>
+			<div>
+				Amber Biosciences has developed the Amberbio app for analysis and visualization of data sets.
+			</div>
+		</div>
+		<div class="column">
+			<h2>Bioinformatics consulting</h2>
+			<div>
+				Amber Biosciences performs bioinformatics consulting with customers from both academia and the biotech sector.<br><br>
+				Amber Biosciences was founded in 2008 as a bioinformatics consulting company by researchers from Lund University.
+			</div>
+		</div>
+		<div class="column">
+			<h2>Writeurl</h2>
+			<div>
+				Amber Biosciences has developed Writeurl which is an online collaborative editor used by people all over the world to write documents.<br><br>
+				Writeurl is available at <a href="http://www.writeurl.com">Writeurl</a>.
+			</div>
+		</div>
+		<div class="column">
+			<h2>Nosybee</h2>
+			<div>
+				Amber Biosciences has developed Nosybee which is a web application used to conduct and analyze surveys.<br><br>
+				Nosybee is available at <a href="http://www.nosybee.com">Nosybee</a>.
+			</div>
+		</div>
+		<div class="column">
+			<h2>Who we are</h2>
+			<div>
+				Amber Biosciences was founded by Morten Krogh, Björn Canbäck, and Ann-Sofie Albrekt in Lund, Sweden. Later, Elias Moberger joined.<br><br>
+				We have a background in programming, bioinformatics, physics, biology, mathematics and statistics.
+			</div>
+		</div>
 		<div class="column">
 			<h2>How we work</h2>
 			<div>
-				We work interactively with our customers and try to listen to their needs. The usual procedure is that we have an initial meeting where we discuss the project. After agreeing on a contract, we perform the analysis in close contact with the customer. Our work is done when there is agreement that a final result has been achieved.
+				We work interactively with our customers and try to listen to their needs.<br><br>
+				We try to write simple code and minimize our dependence on third party code. Our preferred technologies include C, R, Swift, Javascript, Node.js, Nginx, HTML5, CSS3.<br><br>
+				We strive to create functional and clean user interfaces.
 			</div>
-		</div>
-
-		<div class="column">
-			<h2>Gene expression</h2>
-			We have a lot of experience working with gene expression data sets from microarrays or qPCR. We can help with every step in the analysis including finding new scientific hypothesis.
-		</div>
-		
-		<div class="column">
-			<h2>Proteomics</h2>
-			We also analyze proteomics data from mass spectrometry or 2D gels.
-
-		</div>
-
-		<div class="column">
-			<h2>Sequencing</h2>
-			We can take raw sequencing data and pre-process it into a format for further analysis. Sequencing data can be used for gene expression as well as an alternative to microarrays.
-		</div>
-
-		<div class="column">
-			<h2>Classification</h2>
-			We perform supervised classification using support vector machines and other techniques. Classification is useful for diagnostics. For example, blood samples might contain diagnostic information. Supervised classification might be able to find the diagnostic signal in the data.  
-		</div>
-
-		<div class="column">
-			<h2>Statistics</h2>
-			We can perform various statistical tests on the data. We have used R and Matlab, but we can help with other systems as well.
-		</div>
-
-		<div class="column">
-			<h2>Figures</h2>
-			We prepare and customize publication ready figures.
-		</div>
-
-		<div class="column">
-			<h2>Data repositories</h2>
-			Many journals require that data is deposited in a public repository. We handle the entire process of formatting and uploading the data.
-		</div>
-
-		<div class="column">
-			<h2>Pre-processing</h2>
-			Most data requires pre-processing and quality control. We can perform such processing when necessary.
-		</div>
-	
-		<div class="column">
-			<h2>Normalization</h2>
-			We can compare various normalization strategies and help select a proper normalization. 
 		</div>
 	</section>
 
@@ -135,3 +112,4 @@
 </article>
 </body>
 </html>
+
