--- a/public/contact.html
+++ b/public/contact.html
@@ -44,11 +44,11 @@
 
 	<a class="logo-text" href="/">Amberbio</a>
 	<nav class="header-nav">
-		<a href="/features">Features</a>
+		<a href="/#features">Features</a>
 		<a href="/screen-shots">Screen shots</a>
 		<a href="/manual">Manual</a>
-		<a href="/support">Support</a>
-		<a href="/feedback">Feedback</a>
+		<a href="/#support">Support</a>
+		<a href="/#feedback">Feedback</a>
 		<a href="/consulting">Consulting</a>
 		<a href="/about">About us</a>
 		<a href="/contact">Contact</a>
@@ -58,34 +58,41 @@
 </header>
 
 <article>
-	<section>
-		<h1>The Amberbio app for mobile analysis and visualization of biological data sets</h1>
-		<img class="iphone-framed-1" src="/img/iphone-framed-screenshot-1.jpg">
-		<img class="iphone-framed-2" src="/img/iphone-framed-screenshot-2.jpg">
-	</section>
 
-	<section>
-		<h1>About</h1>
-		<p class="tagline">The Amberbio app allows scientists to analyze and visualize biological data sets on mobile devices.</p>
-		<p class="tagline">Many types of data can be analyzed in the app including protein, microRNA, and gene expression data.</p>
-		<p class="tagline">The app will soon be available for iPhone and iPad.</p>
+	<section id="contact">
+		<h1>Contact</h1>
+		<div class="address">
+			<p>Amber Biosciences AB</p>
+			<p>Skrivarevägen 9<br>
+			226 57 Lund<br>
+			Sweden</p>
+			<p>Org. no.: 556755-7763</p>
+			<p><a href="mailto:info@amberbio.com">info@amberbio.com</a></p>
+		</div>
+		<div>
+		<div class="column">
+		    <img src="img/morten.jpg" alt="photo of Morten Krogh">
+			<p style="line-height: 22px;"><b>Morten Krogh</b><br>
+			CEO, Bioinformatician, Developer<br>
+			<a href="mailto:morten.krogh@amberbio.com">morten.krogh@amberbio.com</a><br>
+			+46 (0) 761 - 88 01 43</p>
+		</div>
+		<div class="column">
+		    <img src="img/elias.jpg" alt="photo of Elias Moberger">
+			<p style="line-height: 22px;"><b>Elias Moberger</b><br>
+			Project Manager, Developer<br>
+			<a href="mailto:elias.moberger@amberbio.com">elias.moberger@amberbio.com</a><br>
+			+46 (0) 704 - 68 06 46</p>
+		</div>
+		<div class="column">
+		    <img src="img/ann-sofie.jpg" alt="photo of Ann-Sofie Albrekt" class="person-photo">
+			<p style="line-height: 22px;"><b>Ann-Sofie Albrekt</b><br>
+			Bioinformatician<br>
+			<a href="mailto:ann-sofie.albrekt@amberbio.com">ann-sofie.albrekt@amberbio.com</a><br>
+			+46 (0) 761 - 88 01 42</p>
+		</div>
+		</div>
 	</section>
-
-	<section>
-		<h1>Price</h1>
-		<p class="tagline">The app is a paid app with no extra costs and no adds. Future updates are free.</p>
-		<p class="tagline">The purchased app can be freely installed on other devices with the same Apple ID.</p>
-		<p class="tagline">The current price is  with small country to country variations.</p>
-	</section>
-
-	<section id="privacy">
-		<h1>Privacy</h1>
-		<p class="tagline">The Amberbio app respects user privacy.</p>  
-		<p class="tagline">No data is sent to the server.</p>
-		<p class="tagline">All analysis is performed locally on the device.</p>
-		<p class="tagline">There are no user names and log in.</p>
-	</section>
-
 </article>
 </body>
 </html>
