--- a/public/support.html
+++ b/public/support.html
@@ -58,33 +58,17 @@
 </header>
 
 <article>
-	<section>
-		<h1>The Amberbio app for mobile analysis and visualization of biological data sets</h1>
-		<img class="iphone-framed-1" src="/img/iphone-framed-screenshot-1.jpg">
-		<img class="iphone-framed-2" src="/img/iphone-framed-screenshot-2.jpg">
+
+	<section id="support">
+		<h1>Support</h1>
+		<p class="tagline">We offer support and help with the app.</p>
+		<p class="tagline">If you need help with import of data or using the app, feel free to ask.</p>
+		<p class="tagline">Ask for support at <a href="mailto:info@amberbio.com">info@amberbio.com</a>.</p>
 	</section>
 
-	<section>
-		<h1>About</h1>
-		<p class="tagline">The Amberbio app allows scientists to analyze and visualize biological data sets on mobile devices.</p>
-		<p class="tagline">Many types of data can be analyzed in the app including protein, microRNA, and gene expression data.</p>
-		<p class="tagline">The app will soon be available for iPhone and iPad.</p>
-	</section>
-
-	<section>
-		<h1>Price</h1>
-		<p class="tagline">The app is a paid app with no extra costs and no adds. Future updates are free.</p>
-		<p class="tagline">The purchased app can be freely installed on other devices with the same Apple ID.</p>
-		<p class="tagline">The current price is  with small country to country variations.</p>
-	</section>
-
-	<section id="privacy">
-		<h1>Privacy</h1>
-		<p class="tagline">The Amberbio app respects user privacy.</p>  
-		<p class="tagline">No data is sent to the server.</p>
-		<p class="tagline">All analysis is performed locally on the device.</p>
-		<p class="tagline">There are no user names and log in.</p>
-	</section>
+	<div class="figure">
+	  <img src="img/hierarchical-clustering-plot.png" alt="hierarchical clustering" style="width: 100%">
+	</div>
 
 </article>
 </body>
