separate web pages

--- a/public/contact.html
+++ b/public/contact.html
@@ -44,11 +44,11 @@
 
 	<a class="logo-text" href="/">Amberbio</a>
 	<nav class="header-nav">
-		<a href="/#features">Features</a>
+		<a href="/features">Features</a>
 		<a href="/screen-shots">Screen shots</a>
 		<a href="/manual">Manual</a>
-		<a href="/#support">Support</a>
-		<a href="/#feedback">Feedback</a>
+		<a href="/support">Support</a>
+		<a href="/feedback">Feedback</a>
 		<a href="/consulting">Consulting</a>
 		<a href="/about">About us</a>
 		<a href="/contact">Contact</a>
