--- a/public/about.html
+++ b/public/about.html
@@ -47,8 +47,8 @@
 		<a href="/features">Features</a>
 		<a href="/screen-shots">Screen shots</a>
 		<a href="/manual">Manual</a>
-		<a href="/#support">Support</a>
-		<a href="/#feedback">Feedback</a>
+		<a href="/support">Support</a>
+		<a href="/feedback">Feedback</a>
 		<a href="/consulting">Consulting</a>
 		<a href="/about">About us</a>
 		<a href="/contact">Contact</a>
