--- a/public/consulting.html
+++ b/public/consulting.html
@@ -47,11 +47,11 @@
 		<a href="/features">Features</a>
 		<a href="/screen-shots">Screen shots</a>
 		<a href="/manual">Manual</a>
-		<a href="/#support">Support</a>
-		<a href="/#feedback">Feedback</a>
+		<a href="/support">Support</a>
+		<a href="/feedback">Feedback</a>
 		<a href="/consulting">Consulting</a>
-		<a href="/#about">About us</a>
-		<a href="/#contact">Contact</a>
+		<a href="/about">About us</a>
+		<a href="/contact">Contact</a>
 	</nav>
 	
 	<div style="clear: both; height : 0px;"></div>
@@ -62,7 +62,7 @@
 		<h1>Amber Biosciences offers consulting services in bioinformatics and bio-statistics.</h1>
 		<p class="tagline">We work interactively with our customers and take part in their research projects.</p>
 		<p class="tagline">Contact us either at <a href="mailto:info@amberbio.com">info@amberbio.com</a> or personally.</p>
-		<p class="tagline">Contact information can be found at <a href="/#contact">Contact</a>.</p>
+		<p class="tagline">Contact information can be found at <a href="/contact">Contact</a>.</p>
 	</section>
 
 	<section>
