--- a/public/features.html
+++ b/public/features.html
@@ -47,11 +47,11 @@
 		<a href="/features">Features</a>
 		<a href="/screen-shots">Screen shots</a>
 		<a href="/manual">Manual</a>
-		<a href="/#support">Support</a>
-		<a href="/#feedback">Feedback</a>
+		<a href="/support">Support</a>
+		<a href="/feedback">Feedback</a>
 		<a href="/consulting">Consulting</a>
-		<a href="/#about">About us</a>
-		<a href="/#contact">Contact</a>
+		<a href="/about">About us</a>
+		<a href="/contact">Contact</a>
 	</nav>
 	
 	<div style="clear: both; height : 0px;"></div>
