app store badge

--- a/public/index.html
+++ b/public/index.html
@@ -65,10 +65,8 @@
       </section>
 
       <section>
-	<h1>Available on the app store for iPhone and iPad</h1>
-	<a href="http://www.writeurl.com">
-	  <object class="app-store-badge" type="image/svg+xml" data="/img/Download_on_the_App_Store_Badge_US-UK_135x40.svg">App store badge</object>
-	</a>
+	<h1>Available on the app store for iPhones and iPads</h1>
+	<object class="app-store-badge" type="image/svg+xml" data="/img/app-store-badge-with-link.svg">App store badge</object>
 	<p class="tagline">The app requires ios 8 or later.</p>
       </section>
       
