app store badge

--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,7 @@
 	<h1>Price</h1>
 	<p class="tagline">The app is a paid app with no extra costs and no adds. Future updates are free.</p>
 	<p class="tagline">The purchased app can be freely installed on other devices with the same Apple ID.</p>
-	<p class="tagline">The current price is  with small country to country variations.</p>
+	<p class="tagline">The current price is €74.99, $74.99 or a similar amount in countries with other currencies.</p>
       </section>
 
       <section id="privacy">
