--- a/public/manual.html
+++ b/public/manual.html
@@ -275,9 +275,10 @@ user.
     </p>
 
     <p>
-      The decimal point is "." as in "12.98".
-      Missing values must be written as nothing(empty string), NA, na, NaN, NAN, or nan. The upper
-      left cell can contain anything. An example value table is shown below.
+      The decimal separator can be either point as in "12.98" or comma as in "12,98". If the decimal
+      separator is comma, the file must be tab separated.  Missing values must be written as
+      (the empty string), NA, na, NaN, NAN, or nan. The upper left cell can contain anything. An
+      example value table is shown below.
     </p>
 
     <table>
@@ -289,7 +290,7 @@ user.
       <tr>
         <td>Molecule 1</td>
         <td>6.7</td>
-        <td>NA</td>
+        <td></td>
       </tr>
       <tr>
         <td>Molecule 2</td>
