--- a/public/manual.html
+++ b/public/manual.html
@@ -258,13 +258,12 @@ user.
   <section-manual id="file-format-of-txt-files">
     <h1><a href="#table-of-contents">File format of txt files</a></h1>
     <p>
-      The "txt" files contain tables of values. The rows are separated by newline characters("\n" or
-      "\r\n") and the cells are separated by tabs or commas. The file extension should be "txt" in
-      any case. The app tries to find the separator by first searching for tabs. If there are tabs,
-      the app tries to read the file as a tab separated file. If there are no tabs, it tries to read
-      the file as a comma separated file. Tabs are not allowed within the cells. If there are commas
-      within the cells, the file must be tab separated. The three types of "txt" files are described
-      below.
+      The "txt" files contain tables of values. The rows, or lines, are separated by "\n", "\r", or
+      "\r\n", and the cells are separated by "\t" or ",". The file extension should be "txt" in any
+      case. The app tries to find the separator by first searching for tabs. If there are tabs, the
+      app tries to read the file as a tab separated file. If there are no tabs, the file is read as
+      a comma separated file. Tabs are never allowed within the cells. If there are commas within the
+      cells, the file must be tab separated. The three types of "txt" files are described below.
     </p>
 
     <p>
@@ -276,9 +275,9 @@ user.
 
     <p>
       The decimal separator can be either point as in "12.98" or comma as in "12,98". If the decimal
-      separator is comma, the file must be tab separated.  Missing values must be written as
-      (the empty string), NA, na, NaN, NAN, or nan. The upper left cell can contain anything. An
-      example value table is shown below.
+      separator is comma, the file must be tab separated. Missing values must be written as (the
+      empty string), NA, na, NaN, NAN, or nan. The upper left cell can contain anything. An example
+      value table with two missing values is shown below.
     </p>
 
     <table>
@@ -308,7 +307,7 @@ user.
       The second file type contains factors for the samples. Factors can be imported into a project
       at any time and are not part of the initial creation of the project. The first row of the
       factor file contains sample names. The first column contains factor names. The values are the
-      levels for the factor and sample. The upper left field can be anything. The factor names must
+      levels for the factor and sample. The upper left cell can be anything. The factor names must
       be distinct and the sample names can come in any order. All samples of the project must be
       present. Extra samples will be ignored. An example factor table is shown below
     </p>
@@ -338,7 +337,7 @@ user.
 
     <p>
       The third file type contains molecule annotations and it can be imported at any time and is
-      not part of the creation of the project. The first row contains the name of the molecule
+      not part of the initial creation of the project. The first row contains the name of the molecule
       annotation. The first column must contain all the molecule names. The order of the rows is
       arbitrary and extra molecules are ignored. An example molecule annotation table is shown below
     </p>
@@ -483,6 +482,58 @@ user.
     </p>
   </section-manual>
 
+  <section-manual id="knn">
+    <h1><a href="#table-of-contents">k nearest neighbor classification</a></h1>
+    <p>
+      The k nearest neighbor classifier classifies samples into two or more classes. The class membership is taken from the factor.
+      A factor and at least two levels must be chosen for the classifier.
+    </p>
+
+    <p>
+      Given a training set and a test sample, the k training samples with the smallest distances to
+      the test sample are found. The levels of the k nearest samples are found and if there is a
+      single level that consittutes a majority of the k samples, that level is chosen as the
+      predicted level for the test sample. If no level obtains a majority alone, the test sample is
+      unclassified. If the classifier has only two levels and k is odd, there is always a level with
+      a majority. In other cases, samples might be unclassified.
+    </p>
+
+    <p>
+      The distance measure is euclidean distance. Only molecules without missing values in the
+      entire training and test set are included in the distance calculation.
+    </p>
+
+    <p>
+      Three types of validation is available in the app; a fixed training set, leave-one-out cross
+      validation, and k-fold cross validation.
+    </p>
+
+    <p>
+      When a fixed training set is chosen, the classifier is tested on all remaining samples, both
+      those with real levels within the levels of the classifier and the samples with other
+      levels. The latter type of samples will always be incorrectly classified, but it is still
+      often useful to know their predicted level.
+    </p>
+
+    <p>
+      For leave-one-out cross validation, each sample is left out and tested with the remaining
+      samples as the training set. In that way, each sample obtains one classified level which can be
+      compared to the real level. Leave-one-out classification only uses the samples with levels
+      that are present in the classifier.
+    </p>
+
+    <p>
+      For k-fold cross validation, the samples are divided randomly into k subsets of more or less
+      equal size.  If the number of samples is not divisible by k, some subsets will be one sample
+      larger than other subsets.  Each subset is tested on a classifier trained by the remaining
+      samples. In that way, each sample obtains one classified level which can be compared to the real
+      level. Cross validation only uses the samples with levels that are present in the
+      classifier. In the special case where k is equal to the number of samples, k-fold cross
+      validation is equal to leave-one-out cross validation.
+    </p>
+  </section-manual>
+  
+  
 </article>
 </body>
 </html>
