--- a/public/manual.html
+++ b/public/manual.html
@@ -492,7 +492,7 @@ user.
     <p>
       Given a training set and a test sample, the k training samples with the smallest distances to
       the test sample are found. The levels of the k nearest samples are found and if there is a
-      single level that consittutes a majority of the k samples, that level is chosen as the
+      single level that constitutes a majority of the k samples, that level is chosen as the
       predicted level for the test sample. If no level obtains a majority alone, the test sample is
       unclassified. If the classifier has only two levels and k is odd, there is always a level with
       a majority. In other cases, samples might be unclassified.
