--- a/public/manual.html
+++ b/public/manual.html
@@ -62,10 +62,16 @@
     <h1>Manual for the Amberbio app</h1>
 
     <p>
-      The Amberbio app allows scientists to analyze and visualize data sets, in particular biological data, on mobile devices. All calculations are performed directly on the device and all data is stored locally. The functionality should be evident from the user interface and it is not necessary to read the manual to use the app. The manual gives a high level overview of the app and explains some important details that are not clear from the user interface such as some mathematical details.
+      The Amberbio app allows scientists to analyze and visualize data sets, in particular
+      biological data, on mobile devices. All calculations are performed directly on the device and
+      all data is stored locally. The functionality should be evident from the user interface and it
+      is not necessary to read the manual to use the app. The manual gives a high level overview of
+      the app and explains some important details that are not clear from the user interface such as
+      some mathematical details.
     </p>
     <p>
-      This manual is available in the app and on the web at <a href="http://www.amberbio.com/manual">www.amberbio.com/manual</a>.
+      This manual is available in the app and on the web
+      at <a href="http://www.amberbio.com/manual">www.amberbio.com/manual</a>.
     </p>
   </section-manual>
 
@@ -144,43 +150,54 @@
   <section-manual id="version">
     <h1><a href="#table-of-contents">Version</a></h1>
     <p>
-      Version 1 of the Amberbio app.
+      Version 2 of the Amberbio app.
     </p>
   </section-manual>
 
   <section-manual id="privacy">
     <h1><a href="#table-of-contents">Privacy</a></h1>
     <p>
-      All data is stored locally on the device. All calculations are performed locally. Amber Biosciences does not have any access to user data.
+      All data is stored locally on the device. All calculations are performed locally. Amber
+      Biosciences does not have any access to user data.
     </p>
   </section-manual>
 
   <section-manual id="navigation">
     <h1><a href="#table-of-contents">Navigation</a></h1>
     <p>
-      The app has a home page that is reached by tapping the home icon in the upper left corner. Navigation is done from the home page by tapping the icons or by the back and forward buttons.
+      The app has a home page that is reached by tapping the home icon in the upper left
+      corner. Navigation is done from the home page by tapping the icons or by the back and forward
+      buttons.
     </p>
   </section-manual>
 
   <section-manual id="projects-and-data-sets">
     <h1><a href="#table-of-contents">Projects and data sets</a></h1>
     <p>
-      The app handles projects and data sets. A data set is a set of values organized in a table with rows and columns. A project is a collection of one or more data sets.
-A project is always created with a data set called "The original data set". 
-Other data sets within a project are created by the app using various methods such as normalization or sample removal.
+      The app handles projects and data sets. A data set is a set of values organized in a table
+      with rows and columns. A project is a collection of one or more data sets.  A project is
+      always created with a data set called "The original data set".  Other data sets within a
+      project are created by the app using various methods such as normalization or sample removal.
     </p>
     
     <p>
-      The columns of a data set are called samples and the rows are called molecules. The values in the table
-represent an intensity, or some other quantity, for a sample-molecule pair. Data sets could represent biological information such as gene expression, protein abundances, microRNA expressions, peptide abundances, or metabolite concentrations. Data sets do not need to be of biological nature even though the app uses terminology from biology.
+      The columns of a data set are called samples and the rows are called molecules. The values in
+      the table represent an intensity, or some other quantity, for a sample-molecule pair. Data
+      sets could represent biological information such as gene expression, protein abundances,
+      microRNA expressions, peptide abundances, or metabolite concentrations. Data sets do not need
+      to be of biological nature even though the app uses terminology from biology.
     </p>
    
     <p>
-      A project also contains factor, or grouping, information about the samples. A factor has one or more levels. An example of a factor is "Gender" with levels "male" and "female". Naturally, factors are shared for all data sets within a project.
+      A project also contains factor, or grouping, information about the samples. A factor has one
+      or more levels. An example of a factor is "Gender" with levels "male" and "female". Naturally,
+      factors are shared for all data sets within a project.
     </p>
 
     <p>
-      A project can also contain extra information about the molecules. This information is called molecule annotations. An example could be the molecule annotation "Chromosome" where each molecule has a value such as "chromosome 21".
+      A project can also contain extra information about the molecules. This information is called
+      molecule annotations. An example could be the molecule annotation "Chromosome" where each
+      molecule has a value such as "chromosome 21".
     </p>
   </section-manual>
 
